<resources>
    <string name="app_name">KMK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="trending_search">Trending Search</string>
    <string name="recent_search">Recent Search</string>
    <string name="top_results">Top Results</string>
    <string name="more_results">More Results</string>
    <string name="share">Share</string>
    <string name="watch_list">Watch list</string>
    <string name="trailers">Trailers</string>
    <string name="info">Info</string>
    <string name="stars">Stars:</string>
    <string name="more_like_this">More like this</string>
    <string name="episode">Episode</string>
    <string name="all_content">All content</string>
    <string name="download">Download</string>
    <string name="max_video_quality">Max video quality</string>
    <string name="max_audio_quality">Max audio quality</string>
    <string name="basic">Basic</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="watch_videos_offline">Watch videos offline</string>
    <string name="save_to_watch_later">Save to watch later</string>
    <string name="genres">Genres</string>
    <string name="select_a_category">Select a category</string>
    <string name="history">History</string>
    <string name="preference">Preference</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="t_amp_c"><![CDATA[T&C]]></string>
    <string name="downloads">Downloads</string>
    <string name="see_all_episodes">See all episodes</string>
    <string name="delete_from_download">Delete from download</string>
    <string name="video_quality">Video Quality</string>
    <string name="auto">Auto</string>
    <string name="notification">Notification</string>
    <string name="on">On</string>
    <string name="auto_play">Auto Play</string>
    <string name="download_over_wifi">Download over wifi</string>
    <string name="_480p_sd">480p (SD)</string>
    <string name="_720p_hd">720p (HD)</string>
    <string name="_1080p_full_hd">1080p (Full HD)</string>
</resources>